# openfast-gym

./: .gitignore  README.md  pyproject.toml
FAST_cfg/: IEA-15-240-RWT-Monopile.SFunc.out
FAST_cfg/ServoData/: DISCON-Monopile.IN
FAST_cfg/Wind/: 15MW_CIC2013_V1.wnd
Logs/: OpenFastGym_8_01_14_2025_19_31_07.csv  OpenFastGym_8_01_14_2025_19_47_43.csv  stair_OpenFastGym_8_01_15_2025_19_56_52.csv
example/: sim_fast_gym_pid.py  sim_fast_pid.py  stair_fast_gym_.py  utils.py
example/FAST_cfg/: IEA-15-240-RWT-Monopile.SFunc.out  IEA-15-240-RWT-Monopile.fst
example/FAST_cfg/ServoData/: DISCON-IEA15MW-UMaineSemi.IN  IEA15MW-Monopile.yaml
example/FAST_cfg/Wind/: viento_pruebas.wnd
src/openfast_gym/: README.md  __init__.py  fast_gym_1.py  fast_gym_2.py  fast_gym_3.py  fast_gym_4.py  fast_gym_8.py  fast_gym_base.py  fastlib.py  openfast_gym_env.py
